# dirctl

./: .gitignore  Cargo.toml  README.md
.claude/agents/: git-workflow-automator.md
.claude/skills/architecture-authority/: SKILL.md
.claude/skills/commit-assistant/: SKILL.md
.claude/skills/engineer-principles/: SKILL.md
.claude/skills/prompt-improver/: SKILL.md
.claude/skills/rust-standards/: SKILL.md
.claude/skills/test-generator/: SKILL.md
dirctl-cli/: Cargo.toml
dirctl-cli/src/: main.rs
dirctl-core/: Cargo.toml
dirctl-core/src/: error.rs  lib.rs
dirctl-fs-local/: Cargo.toml
dirctl-fs-local/src/: lib.rs
docs/: IMPLEMENTATION_PLAN.md
docs/system-design/: SRS.md  config_formats.md
