[package]
name = "dirctl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies from workspace
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
indexmap.workspace = true
regex.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
